DTGB-569: DTGB-569: Fix icon alignment in social-list

--- a/components/31-molecules/social-list/_social-list.scss
+++ b/components/31-molecules/social-list/_social-list.scss
@@ -27,6 +27,7 @@ $social-media-link-width: 1.6rem;
         justify-content: center;
         width: $social-media-link-width;
         height: $social-media-link-width;
+        padding-right: .3em;
         border-radius: $social-media-link-width;
         text-decoration: none;
 
